fixing bakground white outline on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,10 +22,9 @@
   top: -100px;
   z-index: -10;
 
-  display: block;
   background-image: url(/bg.jpg);
-  width: 200vw;
-  height: 200vh;
+  width: 400vw;
+  height: 400vh;
   background-size: cover;
   background-repeat: no-repeat;
 
